--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -8,7 +8,7 @@
                             <input type="text" class="form-control" name="title" placeholder="Title" autofocus >
                         </div>
                         <div class="form-group">
-                            <input type="url" name="url" class="form-control" placehoder="URL">   
+                            <input type="url"  class="form-control" name="url" placeholder="Url">   
                         </div>    
                         <div class="form-group">
                             <textarea name="description" rows="2" class="form-control" placeholder="Description"></textarea>   
