--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -11,16 +11,27 @@
                             {{description}}
                         </p>
                         <p>{{timeago created_at}}</p>
-                        <a href="" class="btn btn-danger">
-                            Delete Link
+                        <form class="aside" method="POST" action="/links/delete/{{id}}?_method=DELETE">
+                            <button class= "btn btn-danger"type="submit">
+                                Delete
+                            </button>
+                        </form>
+                        <form class="aside" method="POST" action="/links/edit/{{id}}?_method=PUT">
+                            <button class= "btn btn-secondary"type="submit">
+                                Edit
+                            </button>
                         </a>
-                        <a href="" class="btn btn-secondary">
-                            Edit
-                        </a>
-                        
+                        </form>
                     </div>
                 </div>
             </div>
+            {{else}}
+                <div class="col-md-4 mx-auto">
+                    <div class="card card-body text-center">
+                        <a href="">There are no links.</a>
+                        <a href="/links/add" class="btn btn-primary">Create one</a>
+                    </div>
+                </div>
         {{/each}}
     </div>
 </div>
